<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="build_it_bigger_app">Build It Bigger</string>
    <string name="capstone_app">Capstone: My Own App</string>
    <string name="library_app">Library App</string>
    <string name="scores_app">Scores App</string>
    <string name="spotify_streamer_app">Spotify Streamer</string>
    <string name="xyz_reader_app">XYZ Reader</string>
</resources>
