<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linearLayout"
              android:paddingTop="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/textView"
        android:layout_marginTop="8dp"
        android:layout_gravity="center_horizontal"
        style="@style/MyTitle"/>

    <Button
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:minWidth="216dp"
        android:onClick="presentToast"
        android:text="@string/spotify_streamer_app"
        style="@style/MyButton"/>

    <Button
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:minWidth="216dp"
        android:onClick="presentToast"
        android:text="@string/scores_app"
        style="@style/MyButton"/>

    <Button
        android:id="@+id/button3"
        android:layout_gravity="center_horizontal"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:minWidth="216dp"
        android:onClick="presentToast"
        android:text="@string/library_app"
        style="@style/MyButton"/>

    <Button
        android:id="@+id/button4"
        android:layout_gravity="center_horizontal"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:minWidth="216dp"
        android:onClick="presentToast"
        android:text="@string/build_it_bigger_app"
        style="@style/MyButton"/>

    <Button
        android:id="@+id/button5"
        android:layout_gravity="center_horizontal"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:minWidth="216dp"
        android:onClick="presentToast"
        android:text="@string/xyz_reader_app"
        style="@style/MyButton"/>

    <Button
        android:id="@+id/button6"
        android:layout_gravity="center_horizontal"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:minWidth="216dp"
        android:onClick="presentToast"
        android:text="@string/capstone_app"
        style="@style/MyCapstoneButton"/>

</LinearLayout>
